--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -68,7 +68,7 @@
         }
         @media (max-width: 768px) {
             .single_offer img {
-                height: 300px !important;
+                height: auto !important;
                 width: 100% !important;
                 object-fit: cover !important;
                 border-radius: 10px;
@@ -124,22 +124,23 @@
         </div>
       </div>
       
-
 <!--::header part start::-->
-<header class="main_menu home_menu" style="background-color: #162b45; height: 100px;">
+<header class="main_menu home_menu" style="background-color: #162b45;">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="/"> <img class="large-logo" src="{{site_settings.logo.url}}" alt="logo"> </a>
-                    <button class="navbar-toggler mt-3" type="button" data-toggle="collapse"
+                    <a class="mx-auto" href="/"> 
+                        <img class="large-logo" src="{{site_settings.logo.url}}" alt="logo"> 
+                    </a>
+                    <button class="navbar-toggler mt-5" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="menu_icon"></span>
                     </button>
 
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="{% url 'core:index' %}">Home</a>
                             </li>
@@ -169,7 +170,7 @@
         </div>
     </div>
 </header>
- <!-- Header part end-->
+<!-- Header part end-->
 
 {% block content %}
     
