--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -148,7 +148,7 @@
                                 <a class="nav-link text-light" href="{% url 'core:about' %}">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="{% url 'core:service' %}">Area Of Practice</a>
+                                <a class="nav-link text-light" href="{% url 'core:services' %}">Services</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="{% url 'core:team' %}">Our Team</a>
@@ -183,7 +183,7 @@
             <div class="row justify-content-between">
                 <div class="col-sm-6 col-xl-4">
                     <div class="single-footer-widget footer_1">
-                        <a href="index.html"> <img src="{{site_settings.logo.url}}" alt=""> </a>
+                        <a href="index.html"> <img style="height: 160px;" src="{{site_settings.logo.url}}" alt=""> </a>
                         <p>{{site_about.text}}</p>
                         <div class="social_icon">
                             <a href="#"> <i class="ti-facebook"></i> </a>
