--- a/templates/our-services.html
+++ b/templates/our-services.html
@@ -1,7 +1,7 @@
 {% extends "./partial/base.html" %} 
 
 {% load static %}
-{% block title %}About us{% endblock title %} 
+{% block title %}Our Service{% endblock title %} 
 
 {% block content %}
 <!-- breadcrumb start-->
