--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -237,7 +237,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                     <div class="footer_menu">
                                         <ul>
                                             <li><a href="{% url 'core:index' %}">Home</a></li>
-                                            <li><a href="{% url 'core:service' %}">Area Of Practice</a></li>
+                                            <li><a href="{% url 'core:services' %}">Services</a></li>
                                             <li><a href="{% url 'core:contact' %}">Contact</a></li>
                                             <li><a href="{% url 'core:blog' %}">Blog</a></li>
                                         </ul>
